# async-deflate-zip

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
examples/: comprehensive_test.rs  write_zip.rs  zip.rs
src/: compress.rs  compression.rs  deflate_encoder.rs  error.rs  header.rs  lib.rs  test_utils.rs  types.rs  validate.rs  writer.rs
src/header/: mod.rs  serialize.rs  tests.rs  types.rs
src/writer/: directory_writer.rs  entry_options.rs  entry_writer.rs  helpers.rs  mod.rs  stored_entry.rs  test_utils.rs  writer_options.rs  zip_writer.rs
src/zip_format/: binary.rs  constants.rs  extra_fields.rs  mod.rs  path.rs  tests.rs  time.rs
src/zip_format/headers/: central.rs  end.rs  local.rs  mod.rs
tests/: basic.rs  comments.rs  compression.rs  directory.rs  metadata.rs  symlink.rs  unicode.rs  zip64_count.rs  zip64_large.rs
tests/common/: mod.rs  verify.rs  zip.rs
