[package]
name = "async-deflate-zip"
version = "0.3.0"
edition = "2024"
rust-version = "1.88.0"
description = "Streaming async ZIP archive writer with per-file deflate compression"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["sigoden <sigoden@gmail.com>"]
documentation = "https://docs.rs/async-deflate-zip"
homepage = "https://github.com/sigoden/async-deflate-zip"
categories = ["asynchronous", "compression"]
keywords = ["async", "zip", "archive", "tokio"]
repository = "https://github.com/sigoden/async-deflate-zip"

[dependencies]
tokio = { version = "1", features = ["fs", "io-util", "rt"] }
time = { version = "0.3", features = ["local-offset"] }
crc32fast = "1"
pin-project-lite = "0.2"
flate2 = "1"

[dev-dependencies]
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt"] }
